<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/tvInstrumentName"
        android:text="@string/instrument"
        android:paddingHorizontal="10dp"
     />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnSubPlayer"
        android:text="@string/minus"
        android:layout_toEndOf="@id/tvInstrumentName"
        />
    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvNumberOfPlayers"
        android:text="@string/zero"
        android:gravity="center"
        android:paddingTop="10dp"
        android:layout_toEndOf="@id/btnSubPlayer"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnAddPlayer"
        android:text="@string/plus"
        android:layout_toEndOf="@id/tvNumberOfPlayers"
        />

</RelativeLayout>