<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.playsmart.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.playsmart.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"
        />
    <fragment
        android:id="@+id/navigation_bands"
        android:name="com.example.playsmart.ui.bands.BandsFragment"
        android:label="@string/title_bands"
        tools:layout="@layout/fragment_bands"
        />
</navigation>