<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#909090"
        android:text="@string/register"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/lblUeserName"

            android:layout_height="wrap_content"
            android:text="@string/username"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegisterUsername"
        android:layout_below="@id/lblUeserName"
        android:hint="@string/username"
        android:inputType="text"

        />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/lblPassword"
            android:layout_below="@id/etRegisterUsername"
            android:layout_height="wrap_content"
            android:text="@string/password"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegisterPassword"
        android:layout_below="@id/lblPassword"
        android:hint="@string/password"
        android:inputType="textPassword"

        />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/lblEmail"
            android:layout_below="@id/etRegisterPassword"
            android:layout_height="wrap_content"
            android:text="@string/email"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegisterEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/lblEmail"
        />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/lblPhone"
            android:layout_below="@id/etRegisterEmail"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"></TextView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etRegisterPhoneNumber"
        android:hint="@string/phone_number"
        android:layout_below="@id/lblPhone"
        android:inputType="number"
        tools:ignore="TextFields" />
        <LinearLayout
            android:id="@+id/llSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterPhoneNumber"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblInstrumet"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/instrument"></TextView>
            <Spinner
                android:id="@+id/spInstrument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/lblGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"></TextView>
            <Spinner
                android:id="@+id/spGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSpinner"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegisterSubmit"
            android:text="@string/register"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegisterCancel"
            android:text="@string/cancel"
            android:layout_toEndOf="@id/btnRegisterSubmit"
            />
        </RelativeLayout>


        </RelativeLayout>
</RelativeLayout>
