<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProfileUsername"
        android:text="@string/username"
        android:textSize="@dimen/textSizeBigNormal"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProfileEmail"
        android:text="@string/email"
        android:textSize="@dimen/textSizeBigNormal"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/tvProfileUsername"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProfileInstrument"
        android:text="@string/instrument"
        android:textSize="@dimen/textSizeBigNormal"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/tvProfileEmail"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProfileGenre"
        android:text="@string/genre"
        android:textSize="@dimen/textSizeBigNormal"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/tvProfileInstrument"
        />
</RelativeLayout>