<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewBand"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etBandName"
        android:hint="@string/bandname"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBandGenre"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <ListView
        android:paddingTop="30dp"
        android:id="@+id/lvInstruments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelNewBand"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmitNewBand"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/new_band"
            android:layout_toEndOf="@id/btnCancelNewBand"
            />
    </RelativeLayout>
</LinearLayout>